plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.fundatec.vinilemess'
version = '0.1'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
	implementation "io.github.openfeign:feign-jackson:12.1"
	implementation 'org.projectlombok:lombok:1.18.24'
	implementation 'io.springfox:springfox-swagger2:3.0.0'
	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	testImplementation 'io.rest-assured:rest-assured:3.3.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
